Fixed spacing on details section of main component

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -135,7 +135,7 @@
 .detail {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   text-align: center;
   flex-basis: 45%;
   max-width: 200px;
